[gd_scene load_steps=4 format=2]

[ext_resource path="res://Prototype/Level.gd" type="Script" id=1]
[ext_resource path="res://Prototype/Fire.tscn" type="PackedScene" id=2]
[ext_resource path="res://initialAssets/initFg3.png" type="Texture" id=3]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BarrelTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="Ground" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( 640, 660 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
build_mode = 1
polygon = PoolVector2Array( 0, 584, 1280, 584, 1280, 744, 0, 744 )

[node name="Fire" parent="." instance=ExtResource( 2 )]
position = Vector2( 800, 552 )

[connection signal="timeout" from="BarrelTimer" to="." method="_on_BarrelTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
